[gd_scene load_steps=37 format=2]

[ext_resource path="res://ASSETS/GRAPHICS/TALENT_SELECTION_SCREEN/Techniker_off.png" type="Texture" id=1]
[ext_resource path="res://ASSETS/GRAPHICS/TALENT_SELECTION_SCREEN/Schneller.png" type="Texture" id=2]
[ext_resource path="res://ASSETS/GRAPHICS/TALENT_SELECTION_SCREEN/Hand_zu_hand.png" type="Texture" id=3]
[ext_resource path="res://ASSETS/GRAPHICS/TALENT_SELECTION_SCREEN/Zeitstopp.png" type="Texture" id=4]
[ext_resource path="res://ASSETS/GRAPHICS/TALENT_SELECTION_SCREEN/Duplikate.png" type="Texture" id=5]
[ext_resource path="res://ASSETS/GRAPHICS/TALENT_SELECTION_SCREEN/Mehr_leben.png" type="Texture" id=6]
[ext_resource path="res://ASSETS/GRAPHICS/TALENT_SELECTION_SCREEN/Regener.png" type="Texture" id=7]
[ext_resource path="res://ASSETS/GRAPHICS/TALENT_SELECTION_SCREEN/Dist_exp.png" type="Texture" id=8]
[ext_resource path="res://ASSETS/GRAPHICS/TALENT_SELECTION_SCREEN/SÃ©lection de talent.png" type="Texture" id=9]
[ext_resource path="res://ASSETS/GRAPHICS/TALENT_SELECTION_SCREEN/Teleport.png" type="Texture" id=10]
[ext_resource path="res://ASSETS/GRAPHICS/TALENT_SELECTION_SCREEN/Nix.png" type="Texture" id=11]
[ext_resource path="res://ASSETS/GRAPHICS/TALENT_SELECTION_SCREEN/Boost.png" type="Texture" id=12]
[ext_resource path="res://ASSETS/GRAPHICS/TALENT_SELECTION_SCREEN/Frost_schock.png" type="Texture" id=13]
[ext_resource path="res://ASSETS/GRAPHICS/TALENT_SELECTION_SCREEN/Zweites_leben.png" type="Texture" id=14]
[ext_resource path="res://ASSETS/GRAPHICS/TALENT_SELECTION_SCREEN/Unsichtbar.png" type="Texture" id=15]
[ext_resource path="res://ASSETS/GRAPHICS/TALENT_SELECTION_SCREEN/Absto_expl.png" type="Texture" id=16]
[ext_resource path="res://ASSETS/GRAPHICS/TALENT_SELECTION_SCREEN/Ausweichen.png" type="Texture" id=17]
[ext_resource path="res://ASSETS/GRAPHICS/TALENT_SELECTION_SCREEN/Kraftfeld.png" type="Texture" id=18]
[ext_resource path="res://ASSETS/GRAPHICS/TALENT_SELECTION_SCREEN/Schild.png" type="Texture" id=19]
[ext_resource path="res://ASSETS/GRAPHICS/TALENT_SELECTION_SCREEN/Techniker_on.png" type="Texture" id=20]
[ext_resource path="res://SCENES/SCREENS/Talent.gd" type="Script" id=21]
[ext_resource path="res://ASSETS/GRAPHICS/TALENT_SELECTION_SCREEN/Beam_me_down.png" type="Texture" id=22]
[ext_resource path="res://ASSETS/GRAPHICS/TALENT_SELECTION_SCREEN/Beam_me_down_off.png" type="Texture" id=23]
[ext_resource path="res://ASSETS/SOUND/INTERFACE/Ready_to_beam_down.wav" type="AudioStream" id=24]
[ext_resource path="res://ASSETS/GRAPHICS/TALENT_SELECTION_SCREEN/Zufallig_off.png" type="Texture" id=25]
[ext_resource path="res://ASSETS/GRAPHICS/TALENT_SELECTION_SCREEN/Zufallig_on.png" type="Texture" id=26]
[ext_resource path="res://ASSETS/GRAPHICS/TALENT_SELECTION_SCREEN/Kotzsicher_on.png" type="Texture" id=27]
[ext_resource path="res://ASSETS/GRAPHICS/TALENT_SELECTION_SCREEN/Kotzsicher_off.png" type="Texture" id=28]
[ext_resource path="res://ASSETS/GRAPHICS/TALENT_SELECTION_SCREEN/Bullet_time_off.png" type="Texture" id=29]
[ext_resource path="res://ASSETS/GRAPHICS/TALENT_SELECTION_SCREEN/Geist_off.png" type="Texture" id=30]
[ext_resource path="res://ASSETS/GRAPHICS/TALENT_SELECTION_SCREEN/Bullet_time_on.png" type="Texture" id=31]
[ext_resource path="res://ASSETS/GRAPHICS/TALENT_SELECTION_SCREEN/Geist_on.png" type="Texture" id=32]

[sub_resource type="Animation" id=1]
resource_name = "Beam_blink"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Control/00_beam:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("Ready_to_beam_down")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 24 )
} ],
"times": PoolRealArray( 0.1 )
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Control/00_beam:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Control/01_telep:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Control/02_boost:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Control/03_abs_exp:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Control/04_kraft:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Control/05_fro_sch:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../Control/06_schne:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../Control/07_zeits:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("../Control/08_dupli:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("../Control/09_zwe_leb:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("../Control/10_auswe:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("../Control/11_unsic:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("../Control/12_schil:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("../Control/13_meh_leb:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("../Control/14_regen:visible")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("../Control/15_dis_exp:visible")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("../Control/16_nix:visible")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("../Control/17_han_spe:visible")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("../Control/18_zufal:visible")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/18/type = "value"
tracks/18/path = NodePath("../Control/19_kotzs:visible")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/19/type = "value"
tracks/19/path = NodePath("../Control/20_bul_tim:visible")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/20/type = "value"
tracks/20/path = NodePath("../Control/21_geist:visible")
tracks/20/interp = 1
tracks/20/loop_wrap = true
tracks/20/imported = false
tracks/20/enabled = true
tracks/20/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/21/type = "value"
tracks/21/path = NodePath("../Control/22_techn:visible")
tracks/21/interp = 1
tracks/21/loop_wrap = true
tracks/21/imported = false
tracks/21/enabled = true
tracks/21/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "blink"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Control/01_telep:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Control/02_boost:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Control/03_abs_exp:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Control/04_kraft:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Control/05_fro_sch:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../Control/06_schne:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../Control/07_zeits:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("../Control/08_dupli:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("../Control/09_zwe_leb:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("../Control/10_auswe:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("../Control/11_unsic:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("../Control/12_schil:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("../Control/13_meh_leb:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("../Control/14_regen:visible")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("../Control/15_dis_exp:visible")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("../Control/16_nix:visible")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("../Control/17_han_spe:visible")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("../Control/18_zufal:visible")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}
tracks/18/type = "value"
tracks/18/path = NodePath("../Control/19_kotzs:visible")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}
tracks/19/type = "value"
tracks/19/path = NodePath("../Control/20_bul_tim:visible")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}
tracks/20/type = "value"
tracks/20/path = NodePath("../Control/21_geist:visible")
tracks/20/interp = 1
tracks/20/loop_wrap = true
tracks/20/imported = false
tracks/20/enabled = true
tracks/20/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}
tracks/21/type = "value"
tracks/21/path = NodePath("../Control/22_techn:visible")
tracks/21/interp = 1
tracks/21/loop_wrap = true
tracks/21/imported = false
tracks/21/enabled = true
tracks/21/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}

[node name="PAPA_Talent" type="Node2D"]
script = ExtResource( 21 )

[node name="Talent_OFF" type="Sprite" parent="."]
position = Vector2( 240, 135 )
texture = ExtResource( 9 )

[node name="Beam_Me_Down_Off" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 240, 135 )
texture = ExtResource( 23 )

[node name="Zufallig_Off" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 25 )
centered = false

[node name="Kotzsicher_Off" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 28 )
centered = false

[node name="Bullet_Time_Off" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 29 )
centered = false

[node name="Geist_Off" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 30 )
centered = false

[node name="Techniker_Off" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 240, 135 )
texture = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="00_beam" type="TextureRect" parent="Control"]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 480.0
margin_bottom = 270.0
texture = ExtResource( 22 )

[node name="01_telep" type="TextureRect" parent="Control"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 480.0
margin_bottom = 270.0
texture = ExtResource( 10 )

[node name="02_boost" type="TextureRect" parent="Control"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 480.0
margin_bottom = 270.0
texture = ExtResource( 12 )

[node name="03_abs_exp" type="TextureRect" parent="Control"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 480.0
margin_bottom = 270.0
texture = ExtResource( 16 )

[node name="04_kraft" type="TextureRect" parent="Control"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 480.0
margin_bottom = 270.0
texture = ExtResource( 18 )

[node name="05_fro_sch" type="TextureRect" parent="Control"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 480.0
margin_bottom = 270.0
texture = ExtResource( 13 )

[node name="06_schne" type="TextureRect" parent="Control"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 480.0
margin_bottom = 270.0
texture = ExtResource( 2 )

[node name="07_zeits" type="TextureRect" parent="Control"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 480.0
margin_bottom = 270.0
texture = ExtResource( 4 )

[node name="08_dupli" type="TextureRect" parent="Control"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 480.0
margin_bottom = 270.0
texture = ExtResource( 5 )

[node name="09_zwe_leb" type="TextureRect" parent="Control"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 480.0
margin_bottom = 270.0
texture = ExtResource( 14 )

[node name="10_auswe" type="TextureRect" parent="Control"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 480.0
margin_bottom = 270.0
texture = ExtResource( 17 )

[node name="11_unsic" type="TextureRect" parent="Control"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 480.0
margin_bottom = 270.0
texture = ExtResource( 15 )

[node name="12_schil" type="TextureRect" parent="Control"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 480.0
margin_bottom = 270.0
texture = ExtResource( 19 )

[node name="13_meh_leb" type="TextureRect" parent="Control"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 480.0
margin_bottom = 270.0
texture = ExtResource( 6 )

[node name="14_regen" type="TextureRect" parent="Control"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 480.0
margin_bottom = 270.0
texture = ExtResource( 7 )

[node name="15_dis_exp" type="TextureRect" parent="Control"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 480.0
margin_bottom = 270.0
texture = ExtResource( 8 )

[node name="16_nix" type="TextureRect" parent="Control"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 480.0
margin_bottom = 270.0
texture = ExtResource( 11 )

[node name="17_han_spe" type="TextureRect" parent="Control"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 480.0
margin_bottom = 270.0
texture = ExtResource( 3 )

[node name="18_zufal" type="TextureRect" parent="Control"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 480.0
margin_bottom = 270.0
texture = ExtResource( 26 )

[node name="19_kotzs" type="TextureRect" parent="Control"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 480.0
margin_bottom = 270.0
texture = ExtResource( 27 )

[node name="20_bul_tim" type="TextureRect" parent="Control"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 480.0
margin_bottom = 270.0
texture = ExtResource( 31 )

[node name="21_geist" type="TextureRect" parent="Control"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 480.0
margin_bottom = 270.0
texture = ExtResource( 32 )

[node name="22_techn" type="TextureRect" parent="Control"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 480.0
margin_bottom = 270.0
texture = ExtResource( 20 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Beam_blink = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="Ready_to_beam_down" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 24 )
volume_db = -5.0
bus = "FX"

[node name="AnimationPlayer_Talents" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimationPlayer")
autoplay = "blink"
anims/RESET = SubResource( 3 )
anims/blink = SubResource( 4 )
